# about-coder-me

./: .gitignore  Cargo.toml  README.md  api_status.json  codeforces.py  main.py  requirements.txt  status.json  usernames.json  users.json  vercel.json
.github/scripts/: update_status.py
.github/workflows/: status_check.yml
docs/: endpoints.md
leetcode/: contest.py
platform_scripts/: codechef.py  codeforces.py  codingninjas.py  leetcode.py
src/: main.rs
src/platform_scripts/: codechef.rs  mod.rs
users/: jayam04.json
