[package]
name = "acm-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["blocking"] }
scraper = "0.18.1"
rocket = "0.5.0-rc.2"
lazy_static = "1.4.0"

